--- a/ValantDemoApi/ValantDemoApi/appsettings.json
+++ b/ValantDemoApi/ValantDemoApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=MazeDb;User Id=SA;Password=YourPassword123!;TrustServerCertificate=True;"
+  }
 }
