small adjustmen in unit testing

--- a/ValantDemoApi/ValantDemoApi.UnitTests/ValantDemoApi.UnitTests.csproj
+++ b/ValantDemoApi/ValantDemoApi.UnitTests/ValantDemoApi.UnitTests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>ValantDemoApi.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
