--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -31,9 +34,12 @@
     "@angular-devkit/build-angular": "^18.2.1",
     "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^18.2.0",
+    "@cypress/schematic": "^2.5.2",
     "@ngrx/eslint-plugin": "^18.0.2",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.12",
+    "cypress": "latest",
+    "cypress-file-upload": "^5.0.8",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
